Finished: Shop: master page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10907,3 +10907,12 @@ main {
   min-height: 500px;
 }
 
+.cardShopMaster .card {
+  cursor: pointer;
+}
+
+.cardShopMaster .card .btn,
+.cardShopMaster form .btn {
+  display: none;
+}
+
