--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -1,3 +1,12 @@
 main {
     min-height: 500px;
 }
+
+.cardShopMaster {
+    .card {
+        cursor: pointer;
+    }
+    .card .btn, form .btn {
+        display: none;
+    }
+}
